FIX: Improve contrast ratio of text across the system [q12661]
git-svn-id: http://svn.resourcespace.com/svn/rs/branches/20231009_jbrooke_q12661@22924 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -82,7 +82,7 @@ input[type="submit"], input[type="button"], button {
 
 button, input[type=submit], input[type=button], .RecordPanel .RecordDownloadSpace .DownloadDBlend a, .UploadButton a {
     border: 1px solid transparent;
-    background-color: #1988d7;
+    background-color: #1679c0;
     background-image: none;
     color: #fff;
     text-decoration: none;
